--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "axios": "^1.7.7",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.1",
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
