--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^8.1.0",
     "express-validator": "^7.3.0",
+    "firebase-admin": "^13.5.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
@@ -24,7 +25,8 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
