--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
+    "@studio-freight/lenis": "^1.0.42",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.1",
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.546.0",
@@ -25,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
